# Sistemas-Digitais-Embarcados

./: README.md
Trabalho_T1/: CMakeLists.txt  sdkconfig
Trabalho_T1/docs/Displays/: leitura.c
Trabalho_T1/main/: CMakeLists.txt
Trabalho_T1/main/include/: ContadorController.h  DisplayConfig.h  DisplayManager.h
Trabalho_T1/main/src/: ContadorController.cpp  DisplayManager.cpp  main.cpp
